--- a/hrms_frontend/.gitignore
+++ b/hrms_frontend/.gitignore
@@ -22,3 +22,54 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# HRMS specific files
+*.backup
+*.bak
+*.old
+
+# Database files (if any local DB used)
+*.db
+*.sqlite
+*.sqlite3
+
+# API keys and secrets (additional patterns)
+.env.*
+secrets.json
+config/local.json
+
+# Documentation build
+docs/build/
+docs/.vuepress/dist/
+
+# Testing
+test-results/
+playwright-report/
+coverage/
+
+# Deployment
+deploy/
+deployment/
+
+# Local development
+.local/
+local/
+
+# Backup files
+*~
+*.orig
+*.rej
+
+# IDE specific
+.history/
+.vscode/settings.json
+.fleet/
+
+# OS specific
+.Spotlight-V100
+.Trashes
+ehthumbs_vista.db
+
+# Package manager alternatives
+pnpm-lock.yaml
+bun.lockb
